@@ -1,8 +1,8 @@
-AC_INIT(libdmapsharing, 2.1.1)
+AC_INIT(libdmapsharing, 2.1.2)
 
 dnl when going to/from release please set the nano (fourth number) right !
 dnl releases only do Wall, cvs and prerelease does Werror too
-AS_VERSION(libdmapsharing, LIBDMAPSHARING, 2, 1, 1, LIBDMAPSHARING_CVS="no", LIBDMAPSHARING_CVS="yes")
+AS_VERSION(libdmapsharing, LIBDMAPSHARING, 2, 1, 2, LIBDMAPSHARING_CVS="no", LIBDMAPSHARING_CVS="yes")
 
 dnl FIXME:
 dnl would like to automate this off the above definitions, but API might be 2.2 with version 2.1.
