@@ -1,3 +1,7 @@
+07 September 2010 W. Michael Petullo <mike@flyn.org>
+
+	* Allow dmap-mdns-*-dnssd.c to compile.
+
 06 September 2010 W. Michael Petullo <mike@flyn.org>
 
 	* Fix serving to iTunes 10.
